force-app/main/default/objects/crms14__Charge__c/crms14__Charge__c.object-meta.xml
<CustomObject>
    <label>Charges</label>
    <nameField>
        <label>Charges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>