force-app/main/default/objects/crms14__Charge__c/fields/crms14__Acquired_on__c.field-meta.xml
<CustomField>
    <fullName>crms14__Acquired_on__c</fullName>
    <description>The date the property or undertaking was acquired on</description>
    <inlineHelpText>The date when the company acquired the property or asset related to the charge.</inlineHelpText>
    <label>Acquired On</label>
    <type>Date</type>
</CustomField>