force-app/main/default/objects/crms14__Charge__c/fields/crms14__Assests_Ceased_Released__c.field-meta.xml
<CustomField>
    <fullName>crms14__Assests_Ceased_Released__c</fullName>
    <description>Cease/release information about the charge.</description>
    <inlineHelpText>Indicates if the charge has been ceased or released from obligation.</inlineHelpText>
    <label>Assests Ceased Released</label>
    <length>255</length>
    <type>Text</type>
</CustomField>