force-app/main/default/objects/crms14__Charge__c/fields/crms14__Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>crms14__Charge_Code__c</fullName>
    <description>The charge code is a replacement of the mortgage description</description>
    <label>Charge Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>