force-app/main/default/objects/crms14__Charge__c/fields/crms14__Charge_External_Id__c.field-meta.xml
<CustomField>
    <fullName>crms14__Charge_External_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Charge External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>