force-app/main/default/objects/crms14__Charge__c/fields/crms14__Charge_Number__c.field-meta.xml
<CustomField>
    <fullName>crms14__Charge_Number__c</fullName>
    <description>The charge number is used to reference an individual charge</description>
    <label>Charge Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>