force-app/main/default/objects/crms14__Charge__c/fields/crms14__Classification_Description__c.field-meta.xml
<CustomField>
    <fullName>crms14__Classification_Description__c</fullName>
    <description>Details of the charge classification</description>
    <label>Classification Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>