force-app/main/default/objects/crms14__Charge__c/fields/crms14__Classification_Type__c.field-meta.xml
<CustomField>
    <fullName>crms14__Classification_Type__c</fullName>
    <description>The type of charge classication.</description>
    <label>Classification Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>