force-app/main/default/objects/crms14__Charge__c/fields/crms14__Company__c.field-meta.xml
<CustomField>
    <fullName>crms14__Company__c</fullName>
    <label>Company</label>
    <referenceTo>crms14__Company__c</referenceTo>
    <relationshipLabel>Charges</relationshipLabel>
    <relationshipName>Charges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>