force-app/main/default/objects/crms14__Charge__c/fields/crms14__Covering_Instrument_Date__c.field-meta.xml
<CustomField>
    <fullName>crms14__Covering_Instrument_Date__c</fullName>
    <description>The date by which the series of debentures were created</description>
    <inlineHelpText>The date when the legal document (like a series of debentures) that created the charge was issued.</inlineHelpText>
    <label>Covering Instrument Date</label>
    <type>Date</type>
</CustomField>