force-app/main/default/objects/crms14__Charge__c/fields/crms14__Created_on__c.field-meta.xml
<CustomField>
    <fullName>crms14__Created_on__c</fullName>
    <description>The date the charge was created</description>
    <label>Created On</label>
    <type>Date</type>
</CustomField>