force-app/main/default/objects/crms14__Charge__c/fields/crms14__Delivered_on__c.field-meta.xml
<CustomField>
    <fullName>crms14__Delivered_on__c</fullName>
    <description>The date the charge was submitted to Companies House</description>
    <label>Delivered On</label>
    <type>Date</type>
</CustomField>