force-app/main/default/objects/crms14__Charge__c/fields/crms14__More_Than_Four_Persons_Entitled__c.field-meta.xml
<CustomField>
    <fullName>crms14__More_Than_Four_Persons_Entitled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Charge has more than four person entitled</description>
    <inlineHelpText>Indicates whether more than four individuals are entitled under this charge.</inlineHelpText>
    <label>More Than Four Persons Entitled</label>
    <type>Checkbox</type>
</CustomField>