force-app/main/default/objects/crms14__Charge__c/fields/crms14__Particulars_Chargor_Acting_as_Bare_Trust__c.field-meta.xml
<CustomField>
    <fullName>crms14__Particulars_Chargor_Acting_as_Bare_Trust__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The chargor is acting as a bare trustee for the property</description>
    <inlineHelpText>Indicates whether the person creating the charge is acting only as a trustee.</inlineHelpText>
    <label>Particulars Chargor Acting as Bare Trust</label>
    <type>Checkbox</type>
</CustomField>