force-app/main/default/objects/crms14__Charge__c/fields/crms14__Particulars_Contains_Fixed_Charge__c.field-meta.xml
<CustomField>
    <fullName>crms14__Particulars_Contains_Fixed_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The charge contains a fixed charge</description>
    <inlineHelpText>Confirms if the charge includes a fixed charge on specific assets.</inlineHelpText>
    <label>Particulars Contains Fixed Charge</label>
    <type>Checkbox</type>
</CustomField>