force-app/main/default/objects/crms14__Charge__c/fields/crms14__Particulars_Contains_Floating_Charge__c.field-meta.xml
<CustomField>
    <fullName>crms14__Particulars_Contains_Floating_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The charge contains a floating charge</description>
    <inlineHelpText>Confirms if the charge includes a floating charge over changing assets</inlineHelpText>
    <label>Particulars Contains Floating Charge</label>
    <type>Checkbox</type>
</CustomField>