force-app/main/default/objects/crms14__Charge__c/fields/crms14__Particulars_Contains_Negative_Pledge__c.field-meta.xml
<CustomField>
    <fullName>crms14__Particulars_Contains_Negative_Pledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The charge contains a negative pledge</description>
    <inlineHelpText>Shows whether the charge prevents the company from creating additional charges.</inlineHelpText>
    <label>Particulars Contains Negative Pledge</label>
    <type>Checkbox</type>
</CustomField>