force-app/main/default/objects/crms14__Charge__c/fields/crms14__Particulars_Description__c.field-meta.xml
<CustomField>
    <fullName>crms14__Particulars_Description__c</fullName>
    <description>Details of charge particulars</description>
    <label>Particulars Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>