force-app/main/default/objects/crms14__Charge__c/fields/crms14__Particulars_Floating_Charge_Covers_All__c.field-meta.xml
<CustomField>
    <fullName>crms14__Particulars_Floating_Charge_Covers_All__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The floating charge covers all the property or undertaking or the company</description>
    <inlineHelpText>Indicates if the floating charge covers the entire undertaking of the company.</inlineHelpText>
    <label>Particulars Floating Charge Covers All</label>
    <type>Checkbox</type>
</CustomField>