force-app/main/default/objects/crms14__Charge__c/fields/crms14__Particulars_Type__c.field-meta.xml
<CustomField>
    <fullName>crms14__Particulars_Type__c</fullName>
    <description>The type of charge particulars. (Particulars: Details of charge or undertaking )</description>
    <inlineHelpText>Specifies the type of details provided for the charge</inlineHelpText>
    <label>Particulars Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>