force-app/main/default/objects/crms14__Charge__c/fields/crms14__Persons_Entitled__c.field-meta.xml
<CustomField>
    <fullName>crms14__Persons_Entitled__c</fullName>
    <description>People that are entitled to the charge</description>
    <inlineHelpText>Individuals or entities legally entitled to benefit from the charge.</inlineHelpText>
    <label>Persons Entitled</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>