force-app/main/default/objects/crms14__Charge__c/fields/crms14__Resolved_on__c.field-meta.xml
<CustomField>
    <fullName>crms14__Resolved_on__c</fullName>
    <description>The date the issue was resolved on</description>
    <inlineHelpText>The date when any disputes or issues related to the charge were resolved.</inlineHelpText>
    <label>Resolved On</label>
    <type>Date</type>
</CustomField>