force-app/main/default/objects/crms14__Charge__c/fields/crms14__Satisfied_on__c.field-meta.xml
<CustomField>
    <fullName>crms14__Satisfied_on__c</fullName>
    <description>The date the charge was satisfied</description>
    <label>Satisfied On</label>
    <type>Date</type>
</CustomField>