force-app/main/default/objects/crms14__Charge__c/fields/crms14__Secured_Details_Description__c.field-meta.xml
<CustomField>
    <fullName>crms14__Secured_Details_Description__c</fullName>
    <description>Details of the amount or obligation secured by the charge</description>
    <inlineHelpText>Description of the amount or obligation secured under this charge.</inlineHelpText>
    <label>Secured Details Description</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>