force-app/main/default/objects/crms14__Charge__c/fields/crms14__Secured_Details_Type__c.field-meta.xml
<CustomField>
    <fullName>crms14__Secured_Details_Type__c</fullName>
    <description>The type of secured details. (Secured Details: Information about what is secured against this charge)</description>
    <inlineHelpText>Type of security provided against the charge</inlineHelpText>
    <label>Secured Details Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>