force-app/main/default/objects/crms14__Charge__c/fields/crms14__Status__c.field-meta.xml
<CustomField>
    <fullName>crms14__Status__c</fullName>
    <description>The status of the charge.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>